--- a/css/reset.css
+++ b/css/reset.css
@@ -9,3 +9,10 @@ nav ul {
   padding-left: 0;
   margin: 0;
 }
+
+/* Remove default styles from links */
+a{
+  text-decoration: none;
+  outline: none;
+  color: black;
+}
